# OpenAlex-pipeline

./: .gitignore  README.md  gitignore  pyproject.toml
data/: top50_Soc_Pol.xlsx
notebook/: openalex_pipeline.ipynb
scripts/: 00_smoke_test.py  01_extract.py  02_clean.py  03_analyse.py  04_visualise.py
src/openalex_journal_pipeline/: __init__.py  abstracts.py  cli.py  journals.py  pipeline.py  search.py
src/openalex_journal_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/openalex_pipeline/: utils.py
